# webcrawler-prefect

./: .gitignore  README.md  main.py  pyproject.toml
c2/: __init__.py  main.py
src/: __init__.py  crawler.py
src/flows/: __init__.py  crawler_flow.py
src/tasks/: __init__.py  extract_links.py  process_depth.py  save_page_content.py
src/utils/: __init__.py  url.py
