[tool.poetry]
name = "c2"
version = "0.1.0"
description = "Web crawler project using Prefect"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false  # Disable package mode since we're not creating a package

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^3.1.2"
python-dotenv = "^1.0.1"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.0"
asyncio = "^3.4.3"
pandas = "^2.1.0"
tabulate = "^0.9.0"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawl = "main:run_crawler"
